--- a/.github/workflows/cmake-multibranch-build.yml
+++ b/.github/workflows/cmake-multibranch-build.yml
@@ -13,6 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Showing cmake version
+        run: |
+          cmake --version
+
       - name: Configure CMake
         run: |
           cmake -B ./build
