Added more info to understand error no repro in local

--- a/.github/workflows/cmake-multibranch-build.yml
+++ b/.github/workflows/cmake-multibranch-build.yml
@@ -17,9 +17,11 @@ jobs:
         run: |
           cmake --version
 
+      - name: List project files
+        run: find . -type f | sort
+    
       - name: Configure CMake
-        run: |
-          cmake -B ./build
+        run: cmake -S . -B build
 
       - name: Build project
         run: |
